# pyHMI

./: .gitignore  Dockerfile  HMI.py  HMI_Canvas.py  HMI_Colors.py  HMI_Dialog.py  HMI_Misc.py  HMI_Modbus.py  HMI_Tags.py  build-dev-venv.sh  docker-clean.sh  docker-entrypoint.sh  docker-run.sh  main.py  py-pkg-devel-howto.md  pyproject.toml  requirements.txt  setup.py
examples/: basic.py  basic_class.py  cp2redis.py  custom_tag.py  gw_cp2redis.py  gw_minimal.py  gw_redis2actoboard.py  gw_redis2dweet.py  gw_redis2thingspeak.py  gw_sim_arleux_melangeur.py  gw_with_class.py  hmi_arleux_melangeur.py  hmi_chilly.py  hmi_cp4900_from_redis.py  hmi_mbus_4_bits.py  hmi_mbus_float.py  hmi_mbus_long.py  log_tune.py  mbus_4_bits.py  mbus_basic.py  mbus_class.py  mbus_hmi_float.py  mbus_hmi_relay.py  mbus_long.py  minimal.py  no_gui_sim_valve.py  no_gui_with_class.py  no_tk.py  redis_class.py  relay_hmi.py  sim_gas_flow.py  tag_custom.py
examples/prj/arleux/: hmi_arleux_melangeur  mbus2rrd  rrd_arleux2redis.py  rrd_recorder_arleux_mel  rrd_redis2plot.py  (+1 more)
pyHMI/: Canvas.py  Colors.py  DS_ModbusTCP.py  DS_Redis.py  Dialog.py  Misc.py  SimGas.py  Tag.py  Tags.py  __init__.py
src/pyHMI/: Canvas.py  Colors.py  DS.py  DS_ModbusTCP.py  DS_Redis.py  Dialog.py  Misc.py  SimGas.py  Synoptic.py  Tag.py  UI.py  __init__.py
tests/: fixtures.py  test_basic.py  test_ds_modbus.py  test_ds_modbus_errors.py  test_ds_modbus_io.py  test_ds_redis.py  test_misc.py  test_simgas.py  test_tag.py  utils.py
utils/: mbusTCPserver.py  mbus_server.py  start_mbus_server.sh  stop_mbus_server.sh
(+10 files in other folders)
